--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,73 @@
-Flask==0.8
-Jinja2==2.6
-Werkzeug==0.8.3
-certifi==0.0.8
-chardet==1.0.1
-distribute==0.6.24
-gunicorn==0.14.2
-requests==0.11.1
+altgraph==0.10.2
+audioread==2.0.0
+bdist-mpkg==0.5.0
+bonjour-py==0.3
+decorator==4.0.6
+ez-setup==0.9
+Flask==0.10.1
+imageio==1.4
+itsdangerous==0.24
+Jinja2==2.8
+joblib==0.9.3
+librosa==0.4.1
+macholib==1.5.1
+MarkupSafe==0.23
+matplotlib==1.3.1
+modulegraph==0.10.4
+moviepy==0.2.2.11
+nltk==3.0.5
+numpy==1.8.0rc1
+pbr==1.9.1
+Pillow==3.0.0
+py2app==0.7.3
+pyobjc-core==2.5.1
+pyobjc-framework-Accounts==2.5.1
+pyobjc-framework-AddressBook==2.5.1
+pyobjc-framework-AppleScriptKit==2.5.1
+pyobjc-framework-AppleScriptObjC==2.5.1
+pyobjc-framework-Automator==2.5.1
+pyobjc-framework-CFNetwork==2.5.1
+pyobjc-framework-Cocoa==2.5.1
+pyobjc-framework-Collaboration==2.5.1
+pyobjc-framework-CoreData==2.5.1
+pyobjc-framework-CoreLocation==2.5.1
+pyobjc-framework-CoreText==2.5.1
+pyobjc-framework-DictionaryServices==2.5.1
+pyobjc-framework-EventKit==2.5.1
+pyobjc-framework-ExceptionHandling==2.5.1
+pyobjc-framework-FSEvents==2.5.1
+pyobjc-framework-InputMethodKit==2.5.1
+pyobjc-framework-InstallerPlugins==2.5.1
+pyobjc-framework-InstantMessage==2.5.1
+pyobjc-framework-LatentSemanticMapping==2.5.1
+pyobjc-framework-LaunchServices==2.5.1
+pyobjc-framework-Message==2.5.1
+pyobjc-framework-OpenDirectory==2.5.1
+pyobjc-framework-PreferencePanes==2.5.1
+pyobjc-framework-PubSub==2.5.1
+pyobjc-framework-QTKit==2.5.1
+pyobjc-framework-Quartz==2.5.1
+pyobjc-framework-ScreenSaver==2.5.1
+pyobjc-framework-ScriptingBridge==2.5.1
+pyobjc-framework-SearchKit==2.5.1
+pyobjc-framework-ServiceManagement==2.5.1
+pyobjc-framework-Social==2.5.1
+pyobjc-framework-SyncServices==2.5.1
+pyobjc-framework-SystemConfiguration==2.5.1
+pyobjc-framework-WebKit==2.5.1
+pyOpenSSL==0.13.1
+pyparsing==2.0.1
+python-dateutil==1.5
+pytz==2013.7
+scikit-learn==0.17
+scipy==0.13.0b1
+six==1.10.0
+stevedore==1.12.0
+tqdm==3.1.4
+vboxapi==1.0
+virtualenv==15.0.1
+virtualenv-clone==0.2.6
+virtualenvwrapper==4.7.1
+Werkzeug==0.11.2
+xattr==0.6.4
+zope.interface==4.1.1
